--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">新新农人运营</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="newfarmer_operation">新新农人-运营版</string>
+    <string name="login_button_name">登录</string>
+    <string name="login_user_name">用户名</string>
+    <string name="login_password">密码</string>
 </resources>
